z-index fixes

--- a/resources/assets/sass/_common.scss
+++ b/resources/assets/sass/_common.scss
@@ -73,6 +73,7 @@ body {
 
 .cd-page-top {
   position: absolute;
+	padding: 15px;
   top: 25px;
   left: 185px;
 }
